# oscata-tauri

./: .dockerignore  .env.docker-vnc.example  .env.docker.example  .gitignore  CHANGELOG.md  README.md  WEBGUI_FUTURE_IMPLEMENTATION_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build-docker.yml  build-windows.yml  release-installers.yml
docker/: Dockerfile  README.md  docker-compose.example.yml  entrypoint.sh  unraid-template.xml
docker/ftp-dev/: README.md  docker-compose.yml
public/: manifest.webmanifest
scripts/: build-dmg.sh  build-portable-windows.cmd  build-portable-windows.ps1  docker-vnc.sh  docker.sh  install-debian.sh  publish.mjs  sync-local-db-from-seed.mjs  update-starter-db.mjs  verify-seed-sanitized.mjs
src/: index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: read_current_config.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: library.seed.db  placeholder.txt
src-tauri/src/: analysis.rs  commands.rs  db.rs  downloads.rs  ftp.rs  lib.rs  main.rs  metadata.rs  parser.rs  proxy.rs  telegram.rs  tmdb.rs  uploads.rs
src-tauri/src/web/: auth.rs  dto.rs  handlers.rs  mod.rs
src/components/: ActivityLog.tsx  AppIcon.tsx  DetailPanel.tsx  DownloadFeedbackToast.tsx  DownloadRing.tsx  DownloadsTab.tsx  FilterBar.tsx  FixMatchModal.tsx  IndexErrorToast.tsx  IndexStatus.tsx  MediaCard.tsx  ServerIcons.tsx  TVShowPanel.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Toggle.tsx  TrailerModal.tsx  VirtualMediaGrid.tsx
(+44 files in other folders)
