[package]
name = "oscata-tauri"
version = "0.5.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oscata_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
suppaftp = { version = "6", features = ["async-native-tls"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
urlencoding = "2"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
async-trait = "0.1"
